--- a/P02/full_credit/Makefile
+++ b/P02/full_credit/Makefile
@@ -1,13 +1,13 @@
 CXXFLAGS = --std=c++17
 
-lines: main.o average.o
-	$(CXX) $(CXXFLAGS) main.o average.o -o lines
+averages: main.o average.o
+	$(CXX) $(CXXFLAGS) main.o average.o -o averages
 
-main.o: main.cpp
+main.o: main.cpp 
 	$(CXX) $(CXXFLAGS) -c main.cpp -o main.o
 
-average.o: average.cpp
+average.o: average.cpp 
 	$(CXX) $(CXXFLAGS) -c average.cpp -o average.o
 
 clean:
-	rm -f *.o *.gch ~* a.out lines
+	rm -f *.o *.gch ~* a.out averages
